test/error/parse/FunctionWithoutBraces.mod
MODULE FunctionWithoutBraces;
PROCEDURE Foo: INTEGER;
BEGIN
  RETURN 0;
END Foo;
END FunctionWithoutBraces.
